Fixing comment dark mode bug

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,6 +6,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 html,
 body {
   padding: 0;
@@ -119,3 +120,6 @@ hr {
     }
   }
 }
+
+#disqus_thread { color-scheme: none; }
+
